0024669: BVH binned builder fails to separate objects with the same center